--- a/2-homepage.html
+++ b/2-homepage.html
@@ -34,11 +34,11 @@
 
     <!-- JS Scripts -->
     <script src="scripts.js"></script>
+    <!-- <script src="slick-scripts.js"></script> -->
 
     <!-- Slick Scripts -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     
   </head>
@@ -159,10 +159,10 @@
           <div class="loader"></div>
         </div>
         </section>
-    
+<!--     
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 	<!-- Task 2 -->
       <section class="popular section d-flex align-items-center">
         <div class="container">
@@ -172,18 +172,15 @@
               <span class="main-color">popular</span> tutorials
             </h2>
           </header>
-          <section class="container-fluid text-dark white-bg py-5 mb-5 d-sm-block">
-            <div class="container-lg">
-              <div class="carousel-container mx-5">
-                <div class="carousel px-5" id="popular-card">
-                  <!-- Cards will be appended here -->
-                </div>
-                <div class="loader" id="popular-loader"></div>
-              </div>
+          <div class="carousel-container mx-5">
+            <div class="carousel px-5" id="popular-card">
+              <!-- Cards will be appended here -->
             </div>
-          </section>
+            <div class="loader" id="popular-loader"></div>
+          </div>
         </div>
       </section>
+
       <section class="smiles section">
         <div class="container">
           <header class="section-header">
